<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiperefreshlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@color/itemBackground"
        app:layoutDescription="@xml/main_scene"
        tools:context=".ui.main.MainActivity">

        <LinearLayout
            android:id="@+id/linearlayout_network_status"
            style="@style/StatusView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorStatusNotConnected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_network_status"
                style="@style/StatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/text_no_connectivity" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:background="@android:color/transparent"
            android:hint="@string/term"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintStart_toStartOf="@+id/linearlayout_network_status"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout_network_status">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search_by_location_entry"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/enter_loc"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_baseline_keyboard_24"
            app:layout_constraintEnd_toStartOf="@id/button_search_by_current_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_term" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search_by_current_location"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/use_location"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_baseline_location_on_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_search_by_location_entry"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_term" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinputlayout_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:background="@android:color/transparent"
            android:hint="@string/location"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintTop_toBottomOf="@+id/button_search_by_location_entry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textinputedittext_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_search"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/search"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:backgroundTint="@color/colorAccent"
            app:icon="@drawable/ic_baseline_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textinputlayout_location" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_business"
            style="@style/BusinessRecyclerStyle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_search"
            tools:listitem="@layout/item_business" />
    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>